--- a/index.css
+++ b/index.css
@@ -1,6 +1,14 @@
-
+/*----------------------------------- Background */
+.background-container {
+    background-color: black;
+    top: 0;
+    left: 0;
+    max-width: 100%;
+    max-height: 100vh;
+}
 /*----------------------------------- Video */
 .video-container {
+    background-color: black;
     justify-items: center;
     align-items: center;
     top: 0;
@@ -39,10 +47,19 @@
         opacity: 1;
     }
 }
+
+/*@keyframes fadeOut {
+    from {
+        opacity: 1;
+    }
+    to {
+        opacity: 0;
+    }
+
+}*/
 /*----------------------------------- Logo  */
 
 .logo-container {
-    color: transparent;
     display: inline-block;
     position: fixed;
     justify-content: center;
@@ -55,7 +72,7 @@
 }
 
 
-#logo-button {
+.logo {
     background-color: rgba(0, 0, 0, 0.411);
     display: inline-block;
     margin: 0;
@@ -148,7 +165,7 @@
 #entry-business {
     font-family: 'Julius Sans One', monospace;
     text-decoration: none;
-    color: rgb(174, 152, 224);
+    color: rgb(159, 152, 224);
     letter-spacing: 6px;
     font-weight: 400;
     font-size: 2em;
@@ -165,14 +182,14 @@
 cortesy to Rahul*/
 
 /*--------------------------------- Hover Zoom Effect */  */
-.business-container button {
-    transition: transform .5s ease;
-    -webkit-transition: transform .5s ease;
-    -moz-transition: transform .5s ease;
-    -ms-transition: transform .5s ease;
-    -o-transition: transform .5s ease;
+.business-container a {
+    transition: transform .1s ease;
+    -webkit-transition: transform .1s ease;
+    -moz-transition: transform .1s ease;
+    -ms-transition: transform .1s ease;
+    -o-transition: transform .1s ease;
 }
-.business-container:hover button {
+.business-container:hover a {
     transform: scale(1.5);
     -webkit-transform: scale(1.5);
     -moz-transform: scale(1.5);
@@ -180,48 +197,30 @@ cortesy to Rahul*/
     -o-transform: scale(1.5);
 }
 
-.art-container button {
-    transition: transform .5s ease;
-    -webkit-transition: transform .5s ease;
-    -moz-transition: transform .5s ease;
-    -ms-transition: transform .5s ease;
-    -o-transition: transform .5s ease;
+.art-container a {
+    transition: transform .1s ease;
+    -webkit-transition: transform .1s ease;
+    -moz-transition: transform .1s ease;
+    -ms-transition: transform .1s ease;
+    -o-transition: transform .1s ease;
 }
-.art-container:hover button {
+.art-container:hover a {
     transform: scale(1.5);
     -webkit-transform: scale(1.5);
     -moz-transform: scale(1.5);
     -ms-transform: scale(1.5);
     -o-transform: scale(1.5);
 }
-.logo-container button {
-    transition: transform .5s ease;
-    -webkit-transition: transform .5s ease;
-    -moz-transition: transform .5s ease;
-    -ms-transition: transform .5s ease;
-    -o-transition: transform .5s ease;
+.logo {
+    transition-duration: .1s;
+    -webkit-transition-duration: 1s;
+    -moz-transition-duration: 1s;
+    -ms-transition-duration: 1s;
+    -o-transition-duration: 1s;
+    
 }
-/*.logo-container:hover button {
-    transform
-}*/
-
-/* hover.css hover, hover name fade------ Logo hover    */
-.hvr-fade {
-    display: inline-block;
-    vertical-align: middle;
-    transform: perspective(1px) translateZ(0);
-    -webkit-transform: perspective(1px) translateZ(0);
-    -moz-transform: perspective(1px) translateZ(0);
-    -ms-transform: perspective(1px) translateZ(0);
-    -o-transform: perspective(1px) translateZ(0);
-    box-shadow: 0 0 1px rgba(0, 0, 0, 0);
-    overflow: hidden;
-    transition-duration: .3s;
-    -webkit-transition-duration: .3s;
-    transition-property: color, background-color;
-}
-
-.hvr-fade:hover, .hvr-fade:focus, .hvr-fade:active {
-    background-color:  rgb(239, 147, 147);
-    color: transparent;
+.logo:hover {
+    text-decoration: none;
+    background-color: rgb(239, 147, 147);
+    color: black;
 }
