--- a/index.css
+++ b/index.css
@@ -1,11 +1,8 @@
 /*----------------------------------- Background */
-.background-container {
+body {
     background-color: black;
-    top: 0;
-    left: 0;
-    max-width: 100%;
-    max-height: 100vh;
 }
+
 /*----------------------------------- Video */
 .video-container {
     background-color: black;
