--- a/style.css
+++ b/style.css
@@ -1,23 +1,113 @@
+/* -------------------------------- General styles  */
+html, body {
+    height: 100%;
+    width: 100%;
+    background-color: white;
+    scroll-behavior: smooth;
+    color: black;
+}
 
+/* -------------------------------- Navigation bar  */
+.navbar {
+    background-color: rgba(0, 0, 0, 0.404);
+    border: solid 1px;
+    text-transform: uppercase;
+}
+
+.container {
+    display: inline-block;
+}
+
+.logo-container {
+    left: 0;
+}
+.navbar .navbar-collapse {
+    text-align: right;
+    border-top: 10px solid black;
+    overflow-x: hidden;
+}
+
+.navbar-nav li a {
+    padding: 20px 25px 15px 25px;
+    color:white;
+}
+
+.navbar-fixed-top .container {
+    text-align: right;
+    margin-right: 1%;
+    margin-top: 1%;
+}
+
+.navbar-nav>li>a {
+    line-height: 20px;
+}
+
+.navbar-default .navbar-nav li a:hover {
+    transform: scale(1.5);
+    -webkit-transform: scale(1.5);
+    -moz-transform: scale(1.5);
+    -ms-transform: scale(1.5);
+    -o-transform: scale(1.5);
+    color: rgb(255, 109, 109);
+    text-decoration: none;
+}
+
+
+.navbar-right {
+    float: right!important;
+}
+
+li:hover::after {
+    content: ' ';
+    position: absolute;
+    border: solid 10px transparent;
+    border-top: solid 0px transparent;
+    border-width: 10px;
+    left: 50%;
+    margin-left: -10px;
+    border-color: #222 transparent transparent transparent;
+}
+
+/*  logo    */
+
+.logo {
+    background-color: transparent;
+    display: inline-block;
+    margin: 0;
+    font-family: 'Julius Sans One', monospace;
+    font-size: 1.5em;
+    text-decoration: none;
+    font-weight: 600;
+    letter-spacing: 6px;
+    font-stretch: expanded;
+    color: rgb(239, 147, 147);
+    border: solid 1px;
+    border-color: rgb(239, 147, 147);
+    border-radius: 0;
+    -webkit-border-radius: 0;
+    -moz-border-radius: 0;
+    -ms-border-radius: 0;
+    -o-border-radius: 0;
+    transition: all .5 ease-in-out;
+    -webkit-transition: all .5 ease-in-out;
+    -moz-transition: all .5 ease-in-out;
+    -ms-transition: all .5 ease-in-out;
+    -o-transition: all .5 ease-in-out;
+}
+    
+.logo:hover {
+    text-decoration: none;
+    background-color: rgb(239, 147, 147);
+    color: black;
+}
 
 /* -------------------------------- Backgrounds  */
-
-body {
-    background-color: black;
-    scroll-behavior: smooth;
-}
 
 
 /* -------------------------------- Parallax  */
 
-/*parallax version1 */
-/*.aboutWrapper {
-    display: inline-block;
-    position: absolute;
-    z-index: -1;
-}*/
 .about-wrapper {
-    position: relative;
+    position: absolute;
 }
 #aboutPlx {
     background-image: url(assets/images/maskoff.jpg);
@@ -33,7 +123,7 @@ body {
 .MainContainerAbout {
     perspective: 1px;
     transform-style: preserve-3d;
-    height: 100%;
+    height: 100vh;
     overflow-x: hidden;
     overflow-y: scroll;
 }
@@ -42,9 +132,9 @@ body {
 .aboutPlx {
     display: flex;
     flex: 1 0 auto;
-    position: relative;
+    position: absolute;
     z-index: -1;
-    height: 100%;
+    height: 100vh;
     transform: translate(-1px) scale(2);
     -webkit-transform: translate(-1px) scale(2);
     -moz-transform: translate(-1px) scale(2);
@@ -59,6 +149,9 @@ body {
 
 /* -------------------------------- Content  */
 /*  Home    */
+.home{
+    display: block;
+}
 .home-wrapper { 
     position: relative;
     height: 768px;
@@ -70,22 +163,14 @@ body {
 /*  About   */
 
 .about-container {
-    position: absloute;
+    position: relative;
     height: 1000px;
 
 }
 
-.aboutTop {
-    height: 480px;
-}
-
-.aboutUnder {
-    height: 30px;
-}
-
 .title h1 {
     font-family: 'Julius Sans One', monospace;
-    color: rgb(239, 147, 147);
+    color: rgb(255, 109, 109);
 }
 
 title {
