--- a/style.css
+++ b/style.css
@@ -1,81 +1,131 @@
 /* -------------------------------- General styles  */
-html, body {
+
+
+html,
+body {
+    margin: 0;
+    padding: 0;
     height: 100%;
     width: 100%;
-    background-color: white;
-    scroll-behavior: smooth;
-    color: black;
+    background-color: black;
+}
+
+.title h1 {
+    font-family: 'Julius Sans One', monospace;
+    font-size: 1fr;
+    color: rgb(255, 109, 109);
+}
+
+.title {
+    display: flex;
+    width: 100vw;
+    justify-content: center;
+    align-items: flex-start;
 }
 
 /* -------------------------------- Navigation bar  */
+/*.navbar .navbar-default .sticky-top{
+    position: sticky;
+    width: 100vw;
+    background-color: rgba(0, 0, 0, 0.699);
+    text-transform: uppercase;
+    top: 1fr;
+    background: none;
+    z-index: 1020;
+}*/
+
 .navbar {
-    background-color: rgba(0, 0, 0, 0.404);
-    border: solid 1px;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    -ms-flex-align: center;
+    align-items: center;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+    padding: 1rem 1rem;
+}
+
+
+#navbarCollapseMenu {
+    position: relative;
+    text-align: right;
+    overflow-x: hidden;
+    background-color: transparent;
+}
+
+.navbar-default .navbar-collapse .navbar-nav {
     text-transform: uppercase;
 }
 
-.container {
-    display: inline-block;
+.navbar-default .navbar-collapse .navbar-nav>li>a {
+    padding: 10px 15px;
+    color: rgb(243, 234, 234);
+    font-family: "Montserrat", sans-serif;
+    font-size: 1.5fr;
+    font-weight: 300;
+    line-height: 1.5em;
 }
 
-.logo-container {
-    left: 0;
-}
-.navbar .navbar-collapse {
-    text-align: right;
-    border-top: 10px solid black;
-    overflow-x: hidden;
-}
 
-.navbar-nav li a {
-    padding: 20px 25px 15px 25px;
-    color:white;
-}
-
-.navbar-fixed-top .container {
-    text-align: right;
-    margin-right: 1%;
-    margin-top: 1%;
-}
-
-.navbar-nav>li>a {
-    line-height: 20px;
-}
-
-.navbar-default .navbar-nav li a:hover {
-    transform: scale(1.5);
-    -webkit-transform: scale(1.5);
-    -moz-transform: scale(1.5);
-    -ms-transform: scale(1.5);
-    -o-transform: scale(1.5);
+.navbar-default .navbar-nav>li>a:hover, 
+.navbar-default .navbar-nav>li>a:focus {
     color: rgb(255, 109, 109);
     text-decoration: none;
+    transform: scale(1.1);
+    -webkit-transform: scale(1.1);
+    -moz-transform: scale(1.1);
+    -ms-transform: scale(1.1);
+    -o-transform: scale(1.1);
+}
+
+.navbar-default .navbar-nav>.active>a,
+.navbar-default .navbar-nav>.active>a:hover,
+.navbar-default .navbar-nav>.active>a:focus {
+    color: rgb(255, 109, 109);
+}
+
+.navbar-default .navbar-nav>.open>a,
+.navbar-default .navbar-nav>.open>a:hover,
+.navbar-default .navbar-nav>.open>a:focus {
+    color: rgb(255, 109, 109);
+}
+ 
+.navbar-default .navbar-toggler .fas {
+    color: rgb(243, 234, 234);
+    size: 3x;
+}
+
+.navbar-default .navbar-toggler .fas:hover,
+.navbar-default .navbar-toggler .fas:focus {
+    color:rgb(255, 109, 109);
+    transform: scale(1.1);
+    -webkit-transform: scale(1.1);
+    -moz-transform: scale(1.1);
+    -ms-transform: scale(1.1);
+    -o-transform: scale(1.1);
 }
 
 
-.navbar-right {
-    float: right!important;
-}
+.my-nav .navbar-toggler .navbar-collapse {
+    border-color: rgb(243, 234, 234);
+    border: solid 1px;
+    
+}*/
 
-li:hover::after {
-    content: ' ';
-    position: absolute;
-    border: solid 10px transparent;
-    border-top: solid 0px transparent;
-    border-width: 10px;
-    left: 50%;
-    margin-left: -10px;
-    border-color: #222 transparent transparent transparent;
-}
 
 /*  logo    */
+.logo-container {
+    float: left !important;
+    align-items: center;
+}
 
 .logo {
     background-color: transparent;
     display: inline-block;
     margin: 0;
     font-family: 'Julius Sans One', monospace;
-    font-size: 1.5em;
+    font-size: 2fr;
     text-decoration: none;
     font-weight: 600;
     letter-spacing: 6px;
@@ -94,96 +144,65 @@ li:hover::after {
     -ms-transition: all .5 ease-in-out;
     -o-transition: all .5 ease-in-out;
 }
-    
+
 .logo:hover {
     text-decoration: none;
     background-color: rgb(239, 147, 147);
     color: black;
 }
 
+@media (max-width: 320px) {
+    .logo {
+        font-size: 1em;
+    }
+}
+
 /* -------------------------------- Backgrounds  */
 
 
-/* -------------------------------- Parallax  */
 
-.about-wrapper {
-    position: absolute;
+
+/* -------------------------------- Sections  */
+
+/*  Home    */
+.black-box {
+    display: block;
+    margin-top: -75px;
+    width: 100vw;
+    height: 78px;
+    background-color: black;
+    border: none;
+    z-index: -1;
 }
-#aboutPlx {
-    background-image: url(assets/images/maskoff.jpg);
-    background-attachment: fixed;
-    background-position: center;
+.background-box{
+    margin-top: 0px;
+    padding: 0;
+    background-image: url(assets/images/redrain.jpg);
+    height: 100vh;
+    width: auto;
+    background-position: top 0 right 0;
     background-repeat: no-repeat;
     background-size: cover;
+    border: none;
     overflow: hidden;
     z-index: -2;
-
-}*/
-
-.MainContainerAbout {
-    perspective: 1px;
-    transform-style: preserve-3d;
-    height: 100vh;
-    overflow-x: hidden;
-    overflow-y: scroll;
 }
 
+@media (max-width: 767px) {
+    .background-box {
+        background-position: left 0;
+    }
+}
 
-.aboutPlx {
+.home {
+    padding: 0;
+    margin: 0;
+}
+.home-row {
     display: flex;
-    flex: 1 0 auto;
-    position: absolute;
-    z-index: -1;
-    height: 100vh;
-    transform: translate(-1px) scale(2);
-    -webkit-transform: translate(-1px) scale(2);
-    -moz-transform: translate(-1px) scale(2);
-    -ms-transform: translate(-1px) scale(2);
-    -o-transform: translate(-1px) scale(2);
-    background-image: url(assets/images/maskoff.jpg);
-
+    margin-top: 18vh;
 }
 
-/* -------------------------------- Colors  */
-
-
-/* -------------------------------- Content  */
-/*  Home    */
-.home{
-    display: block;
+.some-text{
+    color: black;
 }
-.home-wrapper { 
-    position: relative;
-    height: 768px;
-}
-/*  Gallery */
-
-/*  Archive */
-
-/*  About   */
-
-.about-container {
-    position: relative;
-    height: 1000px;
-
-}
-
-.title h1 {
-    font-family: 'Julius Sans One', monospace;
-    color: rgb(255, 109, 109);
-}
-
-title {
-    display: block;
-}
-
-
-.about-text-content {
-    color: whitesmoke;
-    justify-content: center;
-    font-family: 'Julius Sans One', monospace;
-    font-size: 1em;
-
-}
-
-/*  Contact*/
