--- a/style.css
+++ b/style.css
@@ -6,53 +6,82 @@ body {
     margin: 0;
     padding: 0;
     height: 100%;
-    width: 100%;
+    width: 100vw;
     background-color: black;
 }
 
+html {
+    font-size: calc(1em+1vw);
+}
+
+.container-fluid {
+    padding: 0;
+}
+
+/*  Section titles  */
 .title h1 {
     font-family: 'Julius Sans One', monospace;
-    font-size: 1fr;
+    /*font-size: 1fr;*/
     color: rgb(255, 109, 109);
 }
+
+/*  xl-screen    */
 
 .title {
     display: flex;
     width: 100vw;
     justify-content: center;
-    align-items: flex-start;
 }
 
-/* -------------------------------- Navigation bar  */
-/*.navbar .navbar-default .sticky-top{
-    position: sticky;
-    width: 100vw;
-    background-color: rgba(0, 0, 0, 0.699);
+.uppercase {
     text-transform: uppercase;
-    top: 1fr;
-    background: none;
-    z-index: 1020;
-}*/
-
-.navbar {
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-wrap: wrap;
-    flex-wrap: wrap;
-    -ms-flex-align: center;
-    align-items: center;
-    -ms-flex-pack: justify;
-    justify-content: space-between;
-    padding: 1rem 1rem;
 }
 
+button:focus {
+    outline: none;
+}
+
+/* ---------------------------------------------- Navigation bar  */
+
+#nav-container {
+    width: 100vw;
+    margin: 0;
+    padding: 0;
+}
 
 #navbarCollapseMenu {
     position: relative;
-    text-align: right;
-    overflow-x: hidden;
-    background-color: transparent;
+    text-align: left;
+    background-color: rgba(0, 0, 0, 0.50);
+    margin: 0;
+    padding-left: 1%;
+    transition: 0.5s;
+    -webkit-transition: 0.5s;
+    -moz-transition: 0.5s;
+    -ms-transition: 0.5s;
+    -o-transition: 0.5s;
 }
+
+.show {
+    display: block;
+}
+
+
+/* in case of taking the navbar back
+
+.navbar {
+    padding: 2.5rem 1rem 1rem 1rem;
+}
+
+@media (max-width: 990px) {
+    #navbarCollapseMenu {
+        margin: auto;
+        padding-left: 10px;
+        width: 100vw;
+        background-color: rgba(0, 0, 0, 0.40);
+    }
+}*/
+
 
 .navbar-default .navbar-collapse .navbar-nav {
     text-transform: uppercase;
@@ -62,14 +91,14 @@ body {
     padding: 10px 15px;
     color: rgb(243, 234, 234);
     font-family: "Montserrat", sans-serif;
-    font-size: 1.5fr;
     font-weight: 300;
     line-height: 1.5em;
 }
 
-
-.navbar-default .navbar-nav>li>a:hover, 
-.navbar-default .navbar-nav>li>a:focus {
+/* menu list effect on hover */
+.navbar #collapseMenu>li>a:hover,
+.navbar #collapseMenu>li>a:focus,
+.navbar #collapseMenu>li>a:active {
     color: rgb(255, 109, 109);
     text-decoration: none;
     transform: scale(1.1);
@@ -79,40 +108,34 @@ body {
     -o-transform: scale(1.1);
 }
 
-.navbar-default .navbar-nav>.active>a,
-.navbar-default .navbar-nav>.active>a:hover,
-.navbar-default .navbar-nav>.active>a:focus {
-    color: rgb(255, 109, 109);
+.navbar-toggler {
+    margin: 0.8em;
+    padding: 0;
+    height: 2.8rem;
+    width: 2.8rem;
+    background-color: rgba(0, 0, 0, 0.40);
+    border-radius: 2rem;
+    -webkit-border-radius: 2rem;
+    -moz-border-radius: 2rem;
+    -ms-border-radius: 2rem;
+    -o-border-radius: 2rem;
 }
 
-.navbar-default .navbar-nav>.open>a,
-.navbar-default .navbar-nav>.open>a:hover,
-.navbar-default .navbar-nav>.open>a:focus {
-    color: rgb(255, 109, 109);
-}
- 
 .navbar-default .navbar-toggler .fas {
+    font-size: 1.4rem;
     color: rgb(243, 234, 234);
-    size: 3x;
 }
 
 .navbar-default .navbar-toggler .fas:hover,
-.navbar-default .navbar-toggler .fas:focus {
-    color:rgb(255, 109, 109);
+.navbar-default .navbar-toggler .fas:focus,
+.navbar-default .navbar-toggler .fas:active {
+    color: rgb(239, 147, 147);
     transform: scale(1.1);
     -webkit-transform: scale(1.1);
     -moz-transform: scale(1.1);
     -ms-transform: scale(1.1);
     -o-transform: scale(1.1);
 }
-
-
-.my-nav .navbar-toggler .navbar-collapse {
-    border-color: rgb(243, 234, 234);
-    border: solid 1px;
-    
-}*/
-
 
 /*  logo    */
 .logo-container {
@@ -121,11 +144,10 @@ body {
 }
 
 .logo {
-    background-color: transparent;
+    background-color: rgba(0, 0, 0, 0.74);
     display: inline-block;
-    margin: 0;
+    margin: 0.8em;
     font-family: 'Julius Sans One', monospace;
-    font-size: 2fr;
     text-decoration: none;
     font-weight: 600;
     letter-spacing: 6px;
@@ -153,28 +175,75 @@ body {
 
 @media (max-width: 320px) {
     .logo {
-        font-size: 1em;
+        font-size: 1rem;
     }
 }
 
-/* -------------------------------- Backgrounds  */
+@media (max-width: 425px) {
+    .navbar-default .navbar-toggler .fas {
+        font-size: 1.2rem;
+    }
 
-
-
-
-/* -------------------------------- Sections  */
-
-/*  Home    */
-.black-box {
-    display: block;
-    margin-top: -75px;
-    width: 100vw;
-    height: 78px;
-    background-color: black;
-    border: none;
-    z-index: -1;
+    .navbar-toggler {
+        margin-left: 0;
+        height: 2.4rem;
+        width: 2.4rem;
+        border-radius: 2rem;
+        -webkit-border-radius: 2rem;
+        -moz-border-radius: 2rem;
+        -ms-border-radius: 2rem;
+        -o-border-radius: 2rem;
+    }
 }
-.background-box{
+
+/* -------------------------------- Dividers  */
+
+/* Divider  general  */
+.divider {
+    background-image: url(assets/images/paperw.jpg);
+    box-shadow: -4px 2px 20px 7px #111111;
+}
+
+.quotation {
+    color: rgb(32, 27, 27);
+}
+
+.quotation>h4 {
+    display: block;
+    text-align: center;
+    font-family: 'Nunito', sans-serif;
+    font-style: italic;
+    font-weight: 100;
+    letter-spacing: 4px;
+    margin: 0;
+    padding: 25px 10px 0 10px;
+}
+
+.reference>h6 {
+    display: block;
+    text-align: center;
+    font-family: 'Montserrat', sans-serif;
+    /*font-size: 1.1em;*/
+    font-style: none;
+    font-weight: 100;
+    letter-spacing: 1px;
+    margin: 0;
+    padding-top: 17px;
+    padding-bottom: 25px;
+}
+
+/*  Divider 4   */
+
+.divider-four>.quotation>#quotation-four>h4 {
+    padding: 30px 10px 30px 10px;
+    font-style: inherit;
+}
+
+/* ---------------------------------------------- Sections  */
+
+/* --------------------------------  Home    */
+
+.background-box {
     margin-top: 0px;
     padding: 0;
     background-image: url(assets/images/redrain.jpg);
@@ -185,6 +254,7 @@ body {
     background-size: cover;
     border: none;
     overflow: hidden;
+    background-attachment: fixed;
     z-index: -2;
 }
 
@@ -198,11 +268,675 @@ body {
     padding: 0;
     margin: 0;
 }
+
 .home-row {
     display: flex;
-    margin-top: 18vh;
+    margin-top: 98px;
 }
 
-.some-text{
+.some-text {
     color: black;
+}
+
+/* Home --------------------------- Poster   */
+
+.poster-container {
+    width: 70vw;
+    height: auto;
+}
+
+
+
+/* --------------------------------  Gallery   */
+
+.background-box-gallery {
+    margin-top: 0px;
+    padding: 0;
+    background-image: url(assets/images/allred.jpg);
+    height: 100vh;
+    width: auto;
+    background-position: top 0 right 10%;
+    background-repeat: no-repeat;
+    background-size: cover;
+    border: none;
+    overflow: hidden;
+    background-attachment: fixed;
+    z-index: -2;
+}
+
+@media (max-width: 767px) {
+    .background-box {
+        background-position: left 0;
+    }
+}
+
+.gallery {
+    padding: 0;
+    margin: 0;
+}
+
+.gallery-row {
+    display: flex;
+    margin-top: 98px;
+}
+
+/* --------------------------------  Archive   */
+
+.background-box-archive {
+    display: flex;
+    margin: 0;
+    padding: 0;
+    background-image: url(assets/images/greenlight.jpg);
+    height: 100vh;
+    width: auto;
+    background-position: top 0 right 0;
+    background-repeat: no-repeat;
+    background-size: 100% auto;
+    border: none;
+    overflow: auto;
+    background-attachment: fixed;
+    z-index: -2;
+}
+
+@media only screen and (max-width: 767px) {
+    .background-box {
+        background-position: top 0 left 0;
+        max-width: 100%;
+        height: auto;
+    }
+}
+
+@media only screen and (min-width: 1200px) {
+    .background-box-archive {
+        height: 100vh;
+        width: auto;
+        background-image: url(assets/images/greenlight2.jpg);
+        background-repeat: no-repeat;
+        background-position: top 0 left 0;
+        background-size: 50% auto;
+    }
+}
+
+.archive {
+    padding: 0;
+    margin: 0;
+}
+
+.archive-row {
+    display: flex;
+    width: 100vw;
+    margin-top: 98px;
+}
+
+/* --------------------------------  About   */
+
+.background-box-about {
+    margin-top: 0;
+    padding: 0;
+    border: none;
+    background-attachment: fixed;
+    overflow: auto;
+    z-index: -2;
+}
+
+.about {
+    padding: 0;
+    margin: 0;
+}
+
+.about-text {
+    display: flex;
+    justify-content: center;
+    width: 100vw;
+    padding-top: 0;
+}
+
+.about-text-content {
+    background-color: rgba(0, 0, 0, 0.404);
+    display: block;
+    width: 100vw;
+    text-align: center;
+    color: rgb(255, 255, 255);
+    font-family: 'Montserrat', sans-serif;
+    font-size: 0.8em;
+    font-weight: 100;
+    letter-spacing: 4px;
+    margin: 0;
+    padding: 25px 10px 0 10px;
+}
+
+.about-row {
+    margin-top: 98px;
+    margin-bottom: 20px;
+}
+
+@media only screen and (max-width: 320px) {
+    .background-box-about {
+        height: 900px;
+        width: auto;
+        background-image: url(assets/images/maskoffm.jpg);
+        background-position: top 72px center;
+        background-size: 100% auto;
+        background-repeat: no-repeat;
+    }
+
+    .about-text {
+        display: flex;
+        margin-top: 250px;
+        height: 500px;
+        overflow: auto;
+    }
+
+    .about-text-content>p {
+        padding: 0 2rem;
+    }
+}
+
+@media only screen and (min-width: 321px) {
+    .background-box-about {
+        height: 1010px;
+        width: auto;
+        background-image: url(assets/images/maskoffm.jpg);
+        background-position: top 72px center;
+        background-size: 100% auto;
+        background-repeat: no-repeat;
+    }
+
+    .about-text {
+        display: flex;
+        margin-top: 280px;
+        height: 560px;
+        overflow: auto;
+    }
+
+    .about-text-content>p {
+        padding: 0 2rem;
+    }
+}
+
+@media only screen and (min-width: 375px) {
+    .background-box-about {
+        height: 1050px;
+        width: auto;
+        background-image: url(assets/images/maskoffm.jpg);
+        background-position: top 72px center;
+        background-size: 100% auto;
+        background-repeat: no-repeat;
+    }
+
+    .about-text {
+        display: flex;
+        margin-top: 310px;
+    }
+}
+
+@media only screen and (min-width: 425px) {
+    .background-box-about {
+        height: 1080px;
+        width: auto;
+        background-image: url(assets/images/maskoffm.jpg);
+        background-position: top 72px center;
+        background-size: 100% auto;
+        background-repeat: no-repeat;
+    }
+
+    .about-text {
+        display: flex;
+        margin-top: 354px;
+    }
+
+    .about-text-content>p {
+        padding: 0 3.5rem;
+    }
+
+}
+
+@media only screen and (min-width: 768px) {
+    .background-box-about {
+        height: 1264px;
+        width: 100vw;
+        background-image: url(assets/images/maskoff.jpg);
+        background-position: top 94px center;
+        background-size: 100% auto;
+        background-repeat: no-repeat;
+    }
+
+    .about {
+        background-color: #100e0e;
+    }
+
+    .about-text {
+        display: flex;
+        margin-top: 550px;
+    }
+
+    .about-text-content>p {
+        padding: 0 5rem;
+    }
+}
+
+
+@media only screen and (min-width: 1024px) {
+    .background-box-about {
+        height: 100rem;
+        width: auto;
+        background-image: url(assets/images/maskoff.jpg);
+        background-repeat: no-repeat;
+        background-position: top 0center;
+        background-size: 100% auto;
+    }
+
+    .about-text {
+        display: flex;
+        margin-top: 70%;
+        height: 1000px;
+        overflow: auto;
+    }
+
+    .about-text-content>p {
+        padding: 0 6rem;
+    }
+}
+
+@media only screen and (min-width: 1200px) {
+    .background-box-about {
+        height: 80rem;
+        width: auto;
+        background-image: url(assets/images/maskoff.jpg);
+        background-repeat: no-repeat;
+        background-position: top 100px right 0;
+        background-size: 50%;
+    }
+
+
+    .about-text {
+        display: flex;
+        justify-content: left;
+        margin-top: 10%;
+        height: 1000px;
+        overflow: auto;
+    }
+
+
+    .about-text-content>p {
+        padding-left: 5%;
+        padding-right: 5%;
+    }
+}
+
+@media only screen and (min-width: 1440px) {
+    .background-box-about {
+        height: 100vh;
+        width: auto;
+        background-image: url(assets/images/maskoff.jpg);
+        background-repeat: no-repeat;
+        background-position: top 100px right 0;
+        background-size: 50%;
+    }
+
+
+    .about-text {
+        display: flex;
+        justify-content: left;
+        margin-top: 10%;
+        height: 100%;
+        overflow: auto;
+    }
+
+
+    .about-text-content>p {
+        font-size: 1rem;
+        padding-left: 5%;
+        padding-right: 5%;
+    }
+}
+
+/* --------------------------------  Contact   */
+
+.contact {
+    padding: 0;
+    margin: 0;
+    background-color: rgba(252, 250, 245);
+}
+
+.contact-row {
+    display: flex;
+    margin-top: 98px;
+}
+
+.background-box-contact {
+    box-shadow: inset 0 0 0 1440px rgba(250, 245, 240, 0.541);
+    margin: 0;
+    padding: 0;
+    background-image: url(assets/images/speaker.jpg);
+    height: 1440px;
+    width: auto;
+    background-position: top 0 left 0;
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-size: 126%;
+    border: none;
+    overflow: hidden;
+    z-index: -2;
+}
+
+.white-overlay {
+    padding: 0;
+    margin: 2rem 0 0 0;
+    background-color: rgba(250, 245, 240, 0.541);
+}
+
+.contact-content {
+    display: flex;
+}
+
+.axed {
+    display: flex;
+    padding: 8rem 2% 3% 4%;
+}
+
+.invitation {
+    display: flex;
+    flex-flow: column wrap;
+    font-family: "Montserrat", sans-serif;
+    color: #100e0e;
+    padding: 8rem 4% 3% 2%;
+    align-self: flex-end;
+}
+
+.invitation>p {
+    padding-top: 3%;
+    margin: 0;
+}
+
+form {
+    display: flex;
+    flex-flow: column wrap;
+    color: #100e0e;
+    padding: 0 3% 0 2%;
+    font-family: "Montserrat", sans-serif;
+}
+
+#InputName {
+    margin: 0;
+}
+
+form label {
+    margin: 0;
+}
+
+form h5 {
+    margin-bottom: 2rem;
+}
+
+.form {
+    padding: 0;
+}
+
+.form-row {
+    padding: 0;
+}
+
+.links {
+    display: flex;
+    width: 100vw;
+    justify-content: flex-end;
+    padding-right: 2%;
+}
+
+#myCV {
+    font-family: 'Julius Sans One', monospace;
+    color: rgb(239, 147, 147);
+}
+
+#submitContact {
+    margin-top: 1rem;
+    text-transform: uppercase;
+    font-family: 'Julius Sans One', monospace;
+    text-decoration: none;
+    font-weight: 600;
+    letter-spacing: 6px;
+    font-stretch: expanded;
+    color: rgb(239, 147, 147);
+    border: solid 1px;
+    border-color: rgb(239, 147, 147);
+    border-radius: 0;
+    -webkit-border-radius: 0;
+    -moz-border-radius: 0;
+    -ms-border-radius: 0;
+    -o-border-radius: 0;
+    cursor: pointer;
+}
+
+#submitContact>h5 {
+    margin: 0;
+}
+
+#submitContact:hover {
+    text-decoration: none;
+    background-color: rgb(239, 147, 147);
+    color: black;
+}
+
+.download-col {
+    display: flex;
+    flex-flow: column;
+}
+
+@media only screen and (max-width: 425px) {
+    .background-box-contact {
+        height: 100%;
+        box-shadow: inset 0 0 0 1440px rgb(250, 245, 240);
+    }
+
+
+    form {
+        padding: 2rem 4% 0 4%;
+    }
+
+    form h5 {
+        font-size: 1rem;
+        margin-bottom: 1rem;
+    }
+
+    .axed {
+        padding: 0 4% 3% 4%;
+    }
+
+    .invitation {
+        display: none;
+        height: 0;
+    }
+
+    .links {
+        padding: 8px 4% 3% 4%;
+    }
+
+    .download-col {
+        padding-top: 3rem;
+        margin: 4%;
+    }
+
+}
+
+@media only screen and (min-width: 426px) {
+    .background-box-contact {
+        height: 100%;
+        box-shadow: inset 0 0 0 1440px rgb(250, 245, 240, 0.541);
+    }
+
+
+    form {
+        padding: 3rem 4% 0 4%;
+    }
+
+    form h5 {
+        font-size: 1rem;
+        margin-bottom: 1rem;
+    }
+
+    .axed {
+        padding: 0 4%;
+    }
+
+    .invitation {
+        display: none;
+        height: 0;
+    }
+
+    .links {
+        padding: 8px 4% 3% 4%;
+    }
+
+    .download-col {
+        padding-top: 0;
+        margin: 4%;
+    }
+}
+
+@media only screen and (min-width: 768px) {
+    .background-box-contact {
+        box-shadow: inset 0 0 0 1440px rgb(250, 245, 240, 0.541);
+        margin: 0;
+        padding: 0;
+        background-image: url(assets/images/speaker.jpg);
+        height: auto;
+        width: auto;
+        background-position: top 0 left 0;
+        background-attachment: fixed;
+        background-repeat: no-repeat;
+        background-size: 126%;
+        border: none;
+        overflow: hidden;
+        z-index: -2;
+    }
+
+    .invitation {
+        display: flex;
+        flex-flow: column wrap;
+        font-family: "Montserrat", sans-serif;
+        color: #100e0e;
+        padding: 8rem 4% 3% 2%;
+        align-self: flex-end;
+    }
+
+    .white-overlay {
+        padding-bottom: 3%;
+    }
+
+    form {
+        padding: 3rem 4% 0 4%;
+    }
+
+    form h5 {
+        font-size: 1rem;
+        margin-bottom: 1rem;
+    }
+
+    .axed {
+        padding: 0 4%;
+    }
+
+
+    .links {
+        padding: 8px 4% 3% 4%;
+    }
+
+    .download-col {
+        padding-top: 0;
+        margin: 4%;
+    }
+
+
+}
+
+@media only screen and (min-width: 1200px) {
+    .background-box-contact {
+        box-shadow: inset 0 0 0 1440px rgb(250, 245, 240, 0.541);
+        margin: 0;
+        padding: 0;
+        background-image: url(assets/images/speaker.jpg);
+        height: auto;
+        min-width: auto;
+        background-position: top 0 left 0;
+        background-attachment: fixed;
+        background-repeat: no-repeat;
+        background-size: 100%;
+        border: none;
+        overflow: hidden;
+        z-index: -2;
+    }
+
+    .white-overlay {
+        padding-bottom: 2%;
+    }
+
+}
+
+
+
+
+
+/* -------------------------------- Media inquiries - general */
+
+@media only screen and (min-width: 1200px) {
+    .title-row {
+        display: flex;
+        margin-top: 10%;
+    }
+
+    .navbar {
+        padding: 3% 3% 1% 3%;
+    }
+
+    .navbar-default .navbar-collapse .navbar-nav>li>a {
+        padding: 0 10fr;
+        font-weight: 300;
+    }
+}
+
+/* -------------------------------- Footer */
+
+footer {
+    height: 10rem;
+    background-color: rgb(66, 109, 110);
+}
+
+.footer-row {
+    height: 100%;
+    width: auto;
+    padding: 0;
+}
+
+
+.col-social {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.col-social i {
+    font-size: 3.5em;
+    color: rgb(250, 245, 240);
+    margin: 0 1.5rem;
+    padding: 1rem 1rem;
+    transition: 0.4s;
+    -webkit-transition: 0.4s;
+    -moz-transition: 0.4s;
+    -ms-transition: 0.4s;
+    -o-transition: 0.4s;
+}
+
+.col-social i:hover {
+    font-size: 2.5em;
+    color: rgb(239, 147, 147);
+    margin: 0 1rem;
+}
+
+@media only screen and (max-width: 425px) {
+    .col-social i {
+        font-size: 3em;
+        margin: 0 1rem;
+        padding: .4rem .4rem;
+    }
 }
