--- a/css/style.css
+++ b/css/style.css
@@ -288,28 +288,29 @@ button:focus {
     justify-content: center;
 }
 .actual-content {
-    display: flex;
-    align-self: flex-end;
     margin-top: 5%;
     
 }
+
 .popPoster {
-    size: 100%;
+    display: flex;
+    flex-flow: column wrap;
+    padding-left: 8%;
 }
 
 #popPoster {
-    height: auto;
-    width: 100%;
-    position: 50% auto;
-    padding-left: 10%;
-    padding-bottom: 100%;
+    border-radius: 720px;
+    padding: 0;
+    -webkit-border-radius: 720px;
+    -moz-border-radius: 720px;
+    -ms-border-radius: 720px;
+    -o-border-radius: 720px;
 }
 
 .popInfo {
-    display: flex;
-    flex-flow: column;
+   
     height: 100%;
-    margin: 0;
+    margin-top: -50px;
     padding: 0;
     align-self: center;
 }
@@ -318,15 +319,18 @@ button:focus {
     color: rgba(252, 250, 245);
     font-family: "Montserrat", sans-serif;
     font-size: 1.2rem;
-    margin-bottom: 1rem;
+    padding-left: 20%; 
+    margin-bottom: 2rem;
 }
 
 .popInfo p {
+    padding-left: 20%; 
     color: rgba(252, 250, 245);
     font-family: "Montserrat", sans-serif;
 }
 
 .actualLink {
+   
     display: flex;
 }
 #actualLink {  
